# ciccd_python_example

./: .bandit.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  noxfile.py  pyproject.toml
.github/workflows/: deploy.yaml  lint.yaml  test.yaml
greetings_app/entrypoints/: app.py
greetings_app/services/greetings/: router.py
greetings_app/src/: greetings_generator.py
tests/: conftest.py
tests/e2e/services/greetings/: test_hello.py
tests/unit/src/: test_greetings_generator.py
